<resources>
    <string name="app_name">BookSelf</string>
    <string name="connect">-</string>
    <string name="string_confirmation">Confirmation</string>
    <string name="sure_to_delete">Are you sure to delete this item?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">确定</string>
    <string name="all">ALL</string>
    <string name="edit_book_details">Edit Book Details</string>
    <string name="save">SAVE</string>
    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="publisher">Publisher:</string>
    <string name="details">DETAILS</string>
    <string name="ISBN">ISBN:</string>
    <string name="symbol_">-</string>
    <string name="pubdate">PubDate:</string>
    <string name="line">_______________________________________________________________</string>
</resources>